2024. 8.10. Modified readers of vertices and faces of zPH3D to output counters to stderr while reading. [zeo_ph, zeo_ph_ply, zeo_ph_stl, zeo_ph_obj, zeo_ph_dae]
2024. 8.10. Debugged zPH3DFromZTK to free an array of 3D vertices if it is not empty after creating the polyhedron. [zeo_ph]
2024. 8.10. Renamed __zeo_stl_echo, zSTLEchoOn and zSTLEchoOff to zeo_ph_echo_while_reading, zPH3DEchoOn and zPH3DEchoOff, respectively, and moved them to zeo_ph. [zeo_ph, zeo_ph_stl]
2024. 7.23. Debugged zTri3DPointIsOnPlane (thanks to Daishi Kaneta). [zeo_elem3d]
2024. 6.27. Added zTri2DDistFromPoint. [zeo_elem2d]
2024. 6.27. Added ZEO_ELEM_TRIXD_DIST_FROM_POINT_PROTOTYPE and ZEO_ELEM_TRIXD_DIST_FROM_POINT, and reimplemented zTri3DDistFromPoint. [zeo_elemxd, zeo_elem3d]
2024. 6.27. Added zTri2DProjPoint and zTri2DClosest. [zeo_elem2d]
2024. 6.27. Added ZEO_ELEM_TRIXD_CLOSEST_PROTOTYPE and ZEO_ELEM_TRIXD_CLOSEST, and reimplemented zTri3DClosest. [zeo_elemxd, zeo_elem3d]
2024. 6.27. Added zTri2DContigVert. [zeo_elem2d]
2024. 6.27. Added ZEO_ELEM_TRIXD_CONTIG_VERT_PROTOTYPE and ZEO_ELEM_TRIXD_CONTIG_VERT, and reimplemented zTri3DContigVert. [zeo_elemxd, zeo_elem3d]
2024. 6.27. Reimplemented zTri3DDistFromPoint to use zTri3DClosest. [zeo_elem3d]
2024. 6.27. Debugged zTri3DClosest. [zeo_elem3d]
2024. 6.27. Renamed zTri3DPointIsOn to zTri3DPointIsOnPlane, and modified specification to accept margin. [zeo_elem3d, zeo_col_gjk]
2024. 6.27. Renamed zTri3DDistFromPoint to zTri3DDistFromPointToPlane. [zeo_elem3d, zeo_ph, zeo_col_ph, zeo_bv3d_obb]
2024. 6.26. Reimplemented ZEO_ELEM_EDGEXD_LINSCALE as a static function generator. [zeo_elemxd]
2024. 6.26. Reimplemented ZEO_ELEM_EDGEXD_DIST_FROM_POINT to use zEdgeXDClosest. [zeo_elemxd]
2024. 6.26. Modified ZEO_ELEM_EDGEXD_CLOSEST not to use zEdgeXDLinScale. [zeo_elemxd]
2024. 6.26. Reimplemented zVec3DOrthoSpace by using zVec3DOrthoNormal. [zeo_vec3d]
2024. 6.25. Modified ZEO_ELEM_EDGEXD_PROJ_POINT. [zeo_elemxd]