@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.15.8
-DEPENDENCY="zeda=1.9.0;zm=1.8.16"
+VERSION=1.15.9
+DEPENDENCY="zeda=1.9.6;zm=1.8.16"
