@@ -1,4 +1,4 @@
-/* Zeo - Z/Geometry and optics computation library.
+/* zeo - Z/Geometry and optics computation library.
  * Copyright (C) 2005 Tomomichi Sugihara (Zhidao)
  *
  * zeo_render_texture - rendering: texture map
@@ -131,24 +131,28 @@ static void *_zTextureFaceFromZTK(void *obj, int i, void *arg, ZTK *ztk)
   return obj;
 }
 
-static void _zTextureNameFPrintZTK(FILE *fp, int i, void *obj){
+static bool _zTextureNameFPrintZTK(FILE *fp, int i, void *obj){
   fprintf( fp, "%s\n", zName((zTexture*)obj) );
+  return true;
 }
 
-static void _zTextureFileFPrintZTK(FILE *fp, int i, void *obj){
+static bool _zTextureFileFPrintZTK(FILE *fp, int i, void *obj){
   fprintf( fp, "%s\n", ((zTexture*)obj)->filename );
+  return true;
 }
 
-static void _zTextureTypeFPrintZTK(FILE *fp, int i, void *obj){
+static bool _zTextureTypeFPrintZTK(FILE *fp, int i, void *obj){
   switch( ((zTexture*)obj)->type ){
   case ZTEXTURE_BUMP:           fprintf( fp, "bump\n" );  break;
   case ZTEXTURE_COLOR: default: fprintf( fp, "color\n" ); break;
   }
+  return true;
 }
 
-static void _zTextureDepthFPrintZTK(FILE *fp, int i, void *obj){
-  if( ((zTexture*)obj)->type == ZTEXTURE_BUMP )
-    fprintf( fp, "%.10g\n", ((zTexture*)obj)->depth );
+static bool _zTextureDepthFPrintZTK(FILE *fp, int i, void *obj){
+  if( ((zTexture*)obj)->type != ZTEXTURE_BUMP ) return false;
+  fprintf( fp, "%.10g\n", ((zTexture*)obj)->depth );
+  return true;
 }
 
 static ZTKPrp __ztk_prp_texture[] = {
