@@ -238,12 +238,15 @@ static void *_zCyl3DDivFromZTK(void *obj, int i, void *arg, ZTK *ztk){
   zCyl3DDiv((zCyl3D*)obj) = zShape3DDivFromZTK(ztk);
   return obj; }
 
-static void _zCyl3DCenterFPrintZTK(FILE *fp, int i, void *obj){
-  zVec3DFPrint( fp, zCyl3DCenter((zCyl3D*)obj,i) ); }
-static void _zCyl3DRadiusFPrintZTK(FILE *fp, int i, void *obj){
-  fprintf( fp, "%.10g\n", zCyl3DRadius((zCyl3D*)obj) ); }
-static void _zCyl3DDivFPrintZTK(FILE *fp, int i, void *obj){
-  fprintf( fp, "%d\n", zCyl3DDiv((zCyl3D*)obj) ); }
+static bool _zCyl3DCenterFPrintZTK(FILE *fp, int i, void *obj){
+  zVec3DFPrint( fp, zCyl3DCenter((zCyl3D*)obj,i) );
+  return true; }
+static bool _zCyl3DRadiusFPrintZTK(FILE *fp, int i, void *obj){
+  fprintf( fp, "%.10g\n", zCyl3DRadius((zCyl3D*)obj) );
+  return true; }
+static bool _zCyl3DDivFPrintZTK(FILE *fp, int i, void *obj){
+  fprintf( fp, "%d\n", zCyl3DDiv((zCyl3D*)obj) );
+  return true; }
 
 static ZTKPrp __ztk_prp_shape_cyl[] = {
   { "center", 2, _zCyl3DCenterFromZTK, _zCyl3DCenterFPrintZTK },
