@@ -259,12 +259,15 @@ static void *_zSphere3DDivFromZTK(void *obj, int i, void *arg, ZTK *ztk){
   zSphere3DDiv((zSphere3D*)obj) = zShape3DDivFromZTK(ztk);
   return obj; }
 
-static void _zSphere3DCenterFPrintZTK(FILE *fp, int i, void *obj){
-  zVec3DFPrint( fp, zSphere3DCenter((zSphere3D*)obj) ); }
-static void _zSphere3DRadiusFPrintZTK(FILE *fp, int i, void *obj){
-  fprintf( fp, "%.10g\n", zSphere3DRadius((zSphere3D*)obj) ); }
-static void _zSphere3DDivFPrintZTK(FILE *fp, int i, void *obj){
-  fprintf( fp, "%d\n", zSphere3DDiv((zSphere3D*)obj) ); }
+static bool _zSphere3DCenterFPrintZTK(FILE *fp, int i, void *obj){
+  zVec3DFPrint( fp, zSphere3DCenter((zSphere3D*)obj) );
+  return true; }
+static bool _zSphere3DRadiusFPrintZTK(FILE *fp, int i, void *obj){
+  fprintf( fp, "%.10g\n", zSphere3DRadius((zSphere3D*)obj) );
+  return true; }
+static bool _zSphere3DDivFPrintZTK(FILE *fp, int i, void *obj){
+  fprintf( fp, "%d\n", zSphere3DDiv((zSphere3D*)obj) );
+  return true; }
 
 static ZTKPrp __ztk_prp_shape_sphere[] = {
   { "center", 1, _zSphere3DCenterFromZTK, _zSphere3DCenterFPrintZTK },
